# MT-OTM-Solver

./: CMakeLists.txt  FindGUROBI.cmake  README.md
inc/: AEdge.h  Bae_Rathinam.h  Basic_GA_ISE.h  DEdge.h  Edge.h  EmptyGraph_Planner.h  FMdMtHPP_NLP.h  GA_ISE_PathTSP.h  GA_PathPlanner.h  GA_defines.h  Generic_Partitioner.h  Graph_Theory_Algorithms.h  Greedy_Partitioner.h  Hybrid_Planner.h  Iterative_Column_Sweeping.h  Iterative_GAISE.h  Iterative_MILP.h  Iterative_MIP.h  Iterative_Sweeping.h  Iterative_Sweeping_GAISE.h  KMeans_Partitioner.h  K_TSP.h  K_TSP_Shft.h  MILP_FMDMTHPP.h  MIP_FMDMTHPP.h  MMdMtHPP_NLP.h  MinTree_Baseline.h  Partitioner.h  PathTSP_LKH.h  PathTSP_MIP_PathPlanner.h  Path_Planner.h  Random_PathPlanner.h  Roots.h  ShortCutTree.h  Short_Horizons.h  Short_Horizons_II.h  Solution.h  Solution_Multi.h  Solver.h  Sweeping_Approach.h  (+14 more)
src/: AEdge.cpp  Bae_Rathinam.cpp  Basic_GA_ISE.cpp  DEdge.cpp  Edge.cpp  EmptyGraph_Planner.cpp  FMdMtHPP_NLP.cpp  GA_ISE_PathTSP.cpp  GA_PathPlanner.cpp  Generic_Partitioner.cpp  Graph_Theory_Algorithms.cpp  Greedy_Partitioner.cpp  Hybrid_Planner.cpp  Iterative_Column_Sweeping.cpp  Iterative_GAISE.cpp  Iterative_MILP.cpp  Iterative_MIP.cpp  Iterative_Sweeping.cpp  Iterative_Sweeping_GAISE.cpp  KMeans_Partitioner.cpp  K_TSP.cpp  K_TSP_Shft.cpp  MILP_FMDMTHPP.cpp  MIP_FMDMTHPP.cpp  MMdMtHPP_NLP.cpp  MinTree_Baseline.cpp  Partitioner.cpp  PathTSP_LKH.cpp  PathTSP_MIP_PathPlanner.cpp  Path_Planner.cpp  Random_PathPlanner.cpp  Roots.cpp  ShortCutTree.cpp  Short_Horizons.cpp  Short_Horizons_II.cpp  Solution.cpp  Solution_Multi.cpp  Solver.cpp  Sweeping_Approach.cpp  Sweeping_Partitioner.cpp  (+17 more)
test/: graphingTool.py  plotGenerator.py  run_experiment_II  run_experiment_III  run_experiment_IV  run_experiment_IX  run_experiment_V  run_experiment_VI  run_experiment_VII  run_experiment_VII-speeds  run_experiment_X  run_experiment_X-speeds  run_experiment_XI
test/Test_Set/: plot_100_12.txt  plot_100_13.txt  plot_100_21.txt  plot_100_26.txt  plot_100_28.txt  plot_100_3.txt  plot_100_30.txt  plot_100_35.txt  plot_100_38.txt  plot_100_39.txt  plot_100_41.txt  plot_100_45.txt  plot_100_46.txt  plot_100_49.txt  plot_100_6.txt  plot_100_7.txt  plot_105_0.txt  plot_105_10.txt  plot_105_11.txt  plot_105_14.txt  plot_105_16.txt  plot_105_29.txt  plot_105_30.txt  plot_105_32.txt  plot_105_39.txt  plot_105_4.txt  plot_105_40.txt  plot_105_42.txt  plot_105_44.txt  plot_10_11.txt  plot_10_14.txt  plot_10_18.txt  plot_10_27.txt  plot_10_33.txt  plot_10_48.txt  plot_10_8.txt  plot_10_9.txt  plot_110_17.txt  plot_110_19.txt  plot_110_21.txt  (+328 more)
test/Test_Set_02/: plot_100_10.txt  plot_100_14.txt  plot_100_17.txt  plot_100_19.txt  plot_100_27.txt  plot_100_4.txt  plot_100_40.txt  plot_100_42.txt  plot_100_47.txt  plot_100_8.txt  plot_100_9.txt  plot_105_13.txt  plot_105_19.txt  plot_105_2.txt  plot_105_20.txt  plot_105_23.txt  plot_105_3.txt  plot_105_34.txt  plot_105_35.txt  plot_105_41.txt  plot_105_43.txt  plot_105_45.txt  plot_105_47.txt  plot_105_5.txt  plot_10_0.txt  plot_10_12.txt  plot_10_15.txt  plot_10_16.txt  plot_10_23.txt  plot_10_32.txt  plot_10_35.txt  plot_10_36.txt  plot_10_39.txt  plot_10_44.txt  plot_10_7.txt  plot_110_11.txt  plot_110_12.txt  plot_110_14.txt  plot_110_16.txt  plot_110_2.txt  (+330 more)
test/Test_Set_I/: plot_100_0.txt  plot_100_1.txt  plot_100_11.txt  plot_100_15.txt  plot_100_16.txt  (+757 more)
(+14202 files in other folders)
